# Fast-DDS-QoS-Profiles-Manager

./: .gitignore  README.md
cli/: CMakeLists.txt  README.md  colcon.pkg
cli/cmake/modules/: Findfastdds_qos_profiles_manager_lib.cmake
cli/examples/ExternalLocatorFeatureConfigurationExample/: cli_example_script.sh  cli_initial_xml_script.sh  deployment.json
cli/examples/cpp/ExternalLocatorFeatureConfigurationExample/: README.md  cli_example_script.sh  deployment.json
cli/include/: config.h.in
cli/poc/: CMakeLists.txt  README.md
cli/poc/src/cxxopts/: main.cpp
cli/poc/src/cxxopts/lib/: cxxopts.hpp
cli/poc/src/docopt/: main.cpp
cli/src/cpp/: argument_constants.hpp  fastdds_qos_profiles_manager_cli.cpp  fastdds_qos_profiles_manager_cli_constants.hpp  parser_constants.hpp  usages.hpp
cli/src/cpp/subparsers/: clear_subparser.cpp  clear_subparser.hpp  help_subparser.cpp  help_subparser.hpp  print_subparser.cpp  print_subparser.hpp  query_subparser.cpp  query_subparser.hpp  set_subparser.cpp  set_subparser.hpp  subparsers_usages.hpp
cli/src/cpp/utils/: builtin_parser.cpp  datareader_subelement_parser.cpp  duration_type_parser.cpp  endpoint_subelement_parser.cpp  external_locators_parser.cpp  locators_parser.cpp  main_element_parser.cpp  participant_subelement_parser.cpp  qos_parser.cpp  transport_subelement_parser.cpp  utils.cpp  utils.hpp
cli/test/: README.md
docs/: CMakeLists.txt  conf.py  index.rst  requirements.txt
docs/cmake/modules/: FindSphinx.cmake  Findfastdds_qos_profiles_manager_lib.cmake
docs/code/: cli_verb_set_example.xml
docs/rst/: spelling_wordlist.txt
docs/rst/01-exports/: api-lib-aliases.include
docs/rst/fastdds_qos_profiles_manager_cli/: cli.rst  cli_usage.rst
docs/rst/fastdds_qos_profiles_manager_cli/cli_elements/: cli_common_elements.rst  cli_datareader_element.rst  cli_datawriter_element.rst  cli_elements_intro.rst  cli_intraprocess_element.rst  cli_log_element.rst  cli_participant_element.rst  cli_topic_element.rst  cli_transport_descriptor_element.rst  cli_types_element.rst
docs/rst/fastdds_qos_profiles_manager_cli/cli_verbs/: cli_clear_verb.rst  cli_compare_verb.rst  cli_help_verb.rst  cli_print_verb.rst  cli_query_verb.rst  cli_set_verb.rst  cli_validate_verb.rst  cli_verbs_intro.rst
docs/rst/fastdds_qos_profiles_manager_gui/: gui.rst
docs/rst/fastdds_qos_profiles_manager_lib/: api_reference.rst  datareader.rst  datawriter.rst  exception.rst  participant.rst  qos_profiles_manager.rst  transport_descriptor.rst
docs/rst/formalia/: titlepage.rst
docs/rst/installation/: linux_installation.rst
docs/rst/notes/: notes.rst
docs/test/: CMakeLists.txt  grep.py
lib/: CMakeLists.txt  README.md  colcon.pkg  doxyfile.in
lib/cmake/packaging/: Config.cmake.in
lib/include/: TransportDescriptor.hpp  eProsima_auto_link.h  fastdds_qos_profiles_manager_dll.h
lib/include/common/: Locator.hpp  ParseXMLErrorHandler.hpp
lib/include/domain_participant/: Allocation.hpp  DefaultExternalUnicastLocators.hpp  DefaultMulticastLocators.hpp  DefaultUnicastLocators.hpp  DomainParticipant.hpp  Port.hpp  PropertiesPolicy.hpp
lib/include/domain_participant/builtin/: Builtin.hpp  InitialPeers.hpp  MetatrafficExternalUnicastLocators.hpp  MetatrafficMulticastLocators.hpp  MetatrafficUnicastLocators.hpp
lib/include/exception/: Exception.hpp
lib/include/fastdds_qos_profiles_manager/: config.h.in  eProsima_auto_link.h  fastdds_qos_profiles_manager_dll.h
lib/include/fastdds_qos_profiles_manager/data_reader/: DataReader.hpp  Qos.hpp
lib/include/fastdds_qos_profiles_manager/data_writer/: DataWriter.hpp  Qos.hpp
lib/include/fastdds_qos_profiles_manager/domain_participant/: Allocation.hpp  DefaultExternalUnicastLocators.hpp  DefaultMulticastLocators.hpp  DefaultUnicastLocators.hpp  DomainParticipant.hpp  Port.hpp  PropertiesPolicy.hpp
lib/include/fastdds_qos_profiles_manager/exception/: Exception.hpp
lib/include/fastdds_qos_profiles_manager/transport_descriptor/: TransportDescriptor.hpp
lib/include/fastdds_qos_profiles_manager_lib/: QoSProfileManager.hpp  QoSProfilesManager.hpp  config.h.in  fastdds_qos_profiles_manager_dll.h
lib/include/fastdds_qos_profiles_manager_lib/data_reader/: DataReader.hpp  Qos.hpp
lib/include/fastdds_qos_profiles_manager_lib/data_writer/: DataWriter.hpp  Qos.hpp
lib/include/fastdds_qos_profiles_manager_lib/domain_participant/: Allocation.hpp  DefaultExternalUnicastLocators.hpp  DefaultMulticastLocators.hpp  DefaultUnicastLocators.hpp  DomainParticipant.hpp  Port.hpp  PropertiesPolicy.hpp
lib/include/fastdds_qos_profiles_manager_lib/exception/: Exception.hpp
lib/include/fastdds_qos_profiles_manager_lib/transport_descriptor/: TransportDescriptor.hpp
lib/include/transport_descriptor/: TransportDescriptor.hpp
lib/include/utils/: ParseXML.hpp  ParseXML.hpp.uncrustify  ParseXMLErrorHandler.hpp  ParseXMLString.hpp  ParseXMLTags.hpp
lib/src/: main.cpp
lib/src/cpp/: QosProfileManager.cpp  QosProfilesManager.cpp  main.cpp
lib/src/cpp/common/: Duration.cpp  Duration.hpp  Locator.cpp  Locator.hpp  LocatorList.cpp  LocatorList.hpp
lib/src/cpp/data_reader/: DataReader.cpp  Qos.cpp
lib/src/cpp/data_writer/: DataWriter.cpp  Qos.cpp
lib/src/cpp/domain_participant/: Allocation.cpp  DefaultExternalUnicastLocators.cpp  DefaultMulticastLocators.cpp  DefaultUnicastLocators.cpp  DomainParticipant.cpp  Port.cpp  PropertiesPolicy.cpp  temp.xml
lib/src/cpp/exception/: Exception.cpp
lib/src/cpp/transport_descriptor/: TransportDescriptor.cpp
lib/src/cpp/utils/: ErrorHandlerXMLManager.cpp  ErrorHandlerXMLManager.hpp  ParseXML.cpp  ParseXML.hpp  ParseXMLErrorHandler.cpp  ParseXMLErrorHandler.hpp  ParseXMLString.cpp  ParseXMLString.hpp  ParseXMLTags.hpp  StringXMLManager.cpp  StringXMLManager.hpp  TagsXMLManager.hpp  XMLManager.cpp  XMLManager.hpp
lib/test/: CMakeLists.txt
lib/test/unit_test/: CMakeLists.txt
lib/test/unit_test/DomainParticipant/: CMakeLists.txt  DomainParticipant.cpp  temp.xml
lib/test/unit_test/TransportDescriptor/: CMakeLists.txt  TransportDescriptor.cpp
(+50 files in other folders)
